crates/pg_syntax/tests/snapshots/postgres_regress/horology@154.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '2020-10-05'::timestamptz >= '4714-11-24 BC'::date as t;"
---
SelectStmt@0..63
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..62
    AExpr@7..57
      TypeCast@7..32
        AConst@7..19
          Sconst@7..19 "'2020-10-05'"
        Typecast@19..21 "::"
        TypeName@21..32
          Ident@21..32 "timestamptz"
      Whitespace@32..33 " "
      GreaterEquals@33..35 ">="
      Whitespace@35..36 " "
      TypeCast@36..57
        AConst@36..51
          Sconst@36..51 "'4714-11-24 BC'"
        Typecast@51..53 "::"
        TypeName@53..57
          Ident@53..57 "date"
    Whitespace@57..58 " "
    As@58..60 "as"
    Whitespace@60..61 " "
    Ident@61..62 "t"
  Ascii59@62..63 ";"

