crates/pg_syntax/tests/snapshots/postgres_regress/horology@156.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '2020-10-05'::timestamptz >= '4714-11-24 BC'::timestamp as t;"
---
SelectStmt@0..68
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..67
    AExpr@7..62
      TypeCast@7..32
        AConst@7..19
          Sconst@7..19 "'2020-10-05'"
        Typecast@19..21 "::"
        TypeName@21..32
          Ident@21..32 "timestamptz"
      Whitespace@32..33 " "
      GreaterEquals@33..35 ">="
      Whitespace@35..36 " "
      TypeCast@36..62
        AConst@36..51
          Sconst@36..51 "'4714-11-24 BC'"
        Typecast@51..53 "::"
        TypeName@53..62
          Timestamp@53..62 "timestamp"
    Whitespace@62..63 " "
    As@63..65 "as"
    Whitespace@65..66 " "
    Ident@66..67 "t"
  Ascii59@67..68 ";"

