crates/pg_syntax/tests/snapshots/postgres_regress/horology@174.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SET DateStyle TO 'European,Postgres';"
---
VariableSetStmt@0..37
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..13 "DateStyle"
  Whitespace@13..14 " "
  To@14..16 "TO"
  Whitespace@16..17 " "
  AConst@17..36
    Sconst@17..36 "'European,Postgres'"
  Ascii59@36..37 ";"

