crates/pg_syntax/tests/snapshots/postgres_regress/horology@176.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMP_TBL VALUES('13/06/1957');"
---
InsertStmt@0..47
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "TIMESTAMP_TBL"
  Whitespace@25..26 " "
  SelectStmt@26..45
    Values@26..32 "VALUES"
    Ascii40@32..33 "("
    List@33..45
      AConst@33..45
        Sconst@33..45 "'13/06/1957'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

