crates/pg_syntax/tests/snapshots/postgres_regress/horology@177.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT count(*) as one FROM TIMESTAMP_TBL WHERE d1 = 'Jun 13 1957';"
---
SelectStmt@0..67
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..22
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
    Ascii41@14..15 ")"
    Whitespace@15..16 " "
    As@16..18 "as"
    Whitespace@18..19 " "
    Ident@19..22 "one"
  Whitespace@22..23 " "
  From@23..27 "FROM"
  Whitespace@27..28 " "
  RangeVar@28..41
    Ident@28..41 "TIMESTAMP_TBL"
  Whitespace@41..42 " "
  Where@42..47 "WHERE"
  Whitespace@47..48 " "
  AExpr@48..66
    ColumnRef@48..50
      Ident@48..50 "d1"
    Whitespace@50..51 " "
    Ascii61@51..52 "="
    Whitespace@52..53 " "
    AConst@53..66
      Sconst@53..66 "'Jun 13 1957'"
  Ascii59@66..67 ";"

